--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
         	<groupId>javax.servlet</groupId>
         	<artifactId>jstl</artifactId>
       	</dependency>
+      	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
