--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,8 +12,8 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/enjoytrip?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
     hikari:
-      username: root
-      password: lily0202
+      username: ssafy
+      password: ssafy
       
 mybatis:
   config-location: classpath:mybatis/mybatis-config.xml
